--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="teamtreehouse.com.iamhere" xmlns:tools="http://schemas.android.com/tools">
+    package="felipegonzalez.com.ciervogo" xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -32,11 +32,11 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
+
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
-
         <activity
-            android:name=".MapsActivity"
+            android:name="felipegonzalez.com.ciervogo.MapsActivity"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,13 +44,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
+        <activity android:name="felipegonzalez.com.ciervogo.ProfileActivity" />
         <activity
-            android:name=".SearchActivity"
+            android:name="felipegonzalez.com.ciervogo.SearchActivity"
             android:label="@string/title_activity_search" />
         <activity
-            android:name=".LoginActivity"
+            android:name="felipegonzalez.com.ciervogo.LoginActivity"
             android:label="@string/title_activity_login"></activity>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
 
 
 
